finished local storage and highscore page

--- a/highscores.html
+++ b/highscores.html
@@ -6,13 +6,25 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
  <meta http-equiv="X-UA-Compatible" content="ie-edge"/>
  <title>Coding Quiz</title>
- <link rel="stylesheet" href="./assets/css/styles.css"/>
+ <link rel="stylesheet" href="./assets/css/highscores.css"/>
 </head>
 
 <body>
  <header class="header">
-  
-  
+  <h1>High Scores</h1>
  </header>
+
+ <section>
+  <div class="highscores">
+   <div id="heading">
+    <h2>High Scores</h2> 
+    <div id="scores"></div>
+     <ol id="scores-list">
+
+     </ol>
+   </div>
+  </div>
+ </section>
+ <script src="./assets/js/highscores.js" ></script>
 </body>
 </html>
