--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    </div>
    <button class="btn" id="next-btn" class="next-btn btn hide">Next</button>
    <div class="result-box">
-    <div id="result">Result</div>
+    <div id="result"></div>
    </div>
  </div>
   <div id="start-page" class="controls">
