fixed some local storage bugs and added a return button to highscore page

--- a/highscores.html
+++ b/highscores.html
@@ -11,7 +11,12 @@
 
 <body>
  <header class="header">
-  <h1>High Scores</h1>
+  <div class="highscore-header">
+   <h1>High Scores</h1>
+  </div>
+  <div class="java-return">
+   <a href="./index.html">JavaScript Quiz</a>
+  </div>
  </header>
 
  <section>
